name:                openstack
version:             0.1.0.0
synopsis:            OpenStack SDK for Haskell
homepage:            https://github.com/anchor/haskell-openstack
license:             MIT
license-file:        LICENSE
author:              Sharif Olorin
maintainer:          engineering@anchor.net.au
copyright:           2014 Anchor Systems   
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     System.OpenStack.Types
  build-depends:       base >=4.7 && <4.8,
                       network-uri,
                       text
  hs-source-dirs:      lib
  default-language:    Haskell2010
